2017-02-17  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Add libdw_so_LIBS to specify the archives libdw is is
	made of, libdw_so_DEPS for libraries it depends on (including
	libeu.a), libdw_so_LDLIBS to specify libraries libdw links against.
	(libdw.so$(EXEEXT)): Add $(libdw_so_LDLIBS), remove enumeration of
	library dependencies, use libdw_so_LIBS rather than relying on the
	order of dependencies specified, add -z,relro.

2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>

	* libdw.h: Remove attribute macro declarations and use
	__noreturn_attribute__ as defined in libelf.h.

2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>

	* dwarf_begin_elf.c: Include endian.h.

2017-03-30  Mark Wielaard  <mjw@redhat.com>

	* dwarf_peel_type.c (dwarf_peel_type): Call dwarf_attr_integrate on
	result.

2016-10-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Correct spelling of DW_LANG_PLI. Add compatibility define.
	* dwarf_aggregate_size.c (array_size): Use correct spelling of
	DW_LANG_PLI.

2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* cfi.c (execute_cfi): Add fallthrough comments.
	* encoded-value.h (encoded_value_size): Add explicit return instead
	of relying on fallthrough.
	* dwfl_report_elf.c (__libdwfl_elf_address_range): Add fallthrough
	comment.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* dwarf_getpubnames.c: Remove sys/param.h include, add system.h.
	* libdw_alloc.c: Likewise.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* libdw.map (ELFUTILS_0.167): New. Add dwelf_strtab_init,
	dwelf_strtab_add, dwelf_strtab_add_len, dwelf_strtab_finalize,
	dwelf_strent_off, dwelf_strent_str and dwelf_strtab_free.

2016-02-13  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Calculate ndirs first, then
	assign to ndirlist.

2015-12-18  Mark Wielaard  <mjw@redhat.com>

	* libdwP.h (struct Dwarf): Remove sectiondata_gzip_mask.
	(__libdw_free_zdata): Remove.
	* dwarf_begin_elf.c (inflate_section): Remove.