@@ -1,3 +1,7 @@
+2017-07-21  Mark Wielaard  <mark@klomp.org>
+
+	* get-lines.c (main): Add dwarf_line_file test.
+
 2017-07-19  Gustavo Romero <gromero@linux.vnet.ibm.com>
 
 	* run-addrcfi.sh: Update generic SPRs names to HTM SPRs names
